update metadata Added archival cover. tag 0.1.0

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Christine-of-the-hills_72678
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 72678-h/images/cover.jpg
 creator:
   author:
     agent_name: Pemberton, Max
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/32059
     wikipedia: https://en.wikipedia.org/wiki/Max_Pemberton
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/72678#Christine-of-the-hills
 gutenberg_issued: '2024-01-11'
 gutenberg_type: Text
 identifiers:
